@@ -1,17 +1,16 @@
 /*
- * Copyright 2009 the original author or authors.
+ * Copyright 2023 the original author or authors.
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *      https://www.apache.org/licenses/LICENSE-2.0
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
  *
- *     https://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
  */
 
 package org.spockframework.runtime;
@@ -269,9 +268,16 @@ public abstract class SpockRuntime {
         // we have a mismatch, so add false for the result
         // due to the way the ValueRecorder works, we have two (n/a) values at the end, so we need to skip them
         values.add(values.size() - 2, false);
+      } else if (left == null || right == null) {
+        values.set(idxActual, left);
+        values.set(idxExpected, right);
+        if (left == null && right == null) {
+          return;
+        }
+        values.set(3, false);
       } else {
-        Pattern pattern = Pattern.compile(right.toString());
-        java.util.regex.Matcher matcher = pattern.matcher(left.toString());
+        Pattern pattern = Pattern.compile(String.valueOf(right));
+        java.util.regex.Matcher matcher = pattern.matcher(String.valueOf(left));
 
         values.set(idxActual, left);
         values.set(idxExpected, right);
