@@ -1,0 +1,7 @@
+Condition not satisfied:
+
+a ==~ b
+| |   |
+| |   [1]
+| false
+null
